fix: collapse组件重写, 增加seperate属性

--- a/src/assets/css/_element-override.scss
+++ b/src/assets/css/_element-override.scss
@@ -1592,6 +1592,24 @@
   }
 }
 
+.el-collapse--seperate {
+  .el-collapse-item__header {
+    background-color: $color-grey-8;
+    border: none;
+    height: 32px;
+  }
+
+  .el-collapse-item__content {
+    margin-top: 16px;
+    border: none;
+    padding: 0;
+  }
+
+  .el-collapse-item__wrap {
+    border: none;
+  }
+}
+
 /* Timeline
 -------------------------- */
 .sub-timeline {
